--- a/PescAR/local.properties
+++ b/PescAR/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Feb 05 16:00:29 CET 2024
-sdk.dir=/Users/lorenzo/Library/Android/sdk
+sdk.dir=C\:\\Users\\Gabriele\\AppData\\Local\\Android\\Sdk
